// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Should create a small alert 1`] = `
<div>
  <div
    class="root success small"
  >
    <div
      class="content"
    >
      <div
        class="icon small"
      >
        <svg
          class="svgWrapper animated"
          version="1.1"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9.23989 10.7168L12.1705 7.68797L13.2485 8.73101L9.22458 12.8898L6.97226 10.4954L8.06485 9.46763L9.23989 10.7168Z"
            fill-rule="evenodd"
          />
          <path
            d="M13.8347 15.2489C12.7597 16.0356 11.4341 16.5 10 16.5C6.41015 16.5 3.5 13.5899 3.5 10C3.5 6.41015 6.41015 3.5 10 3.5C13.5899 3.5 16.5 6.41015 16.5 10C16.5 11.4341 16.0356 12.7597 15.2489 13.8347L16.3199 14.9056C17.3729 13.551 18 11.8487 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18C11.8487 18 13.551 17.3729 14.9056 16.3199L13.8347 15.2489Z"
          />
        </svg>
      </div>
      <p
        class="description small"
      >
        Success test
      </p>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should be able to create an error alert 1`] = `
<div>
  <div
    class="root error medium"
  >
    <div
      class="content"
    >
      <div
        class="icon medium"
      >
        <svg
          class="svgWrapper animated"
          version="1.1"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.6637 8.39704L8.39703 12.6637L7.33637 11.603L11.603 7.33638L12.6637 8.39704Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M11.603 12.6637L7.3363 8.39704L8.39696 7.33638L12.6636 11.603L11.603 12.6637Z"
            fill-rule="evenodd"
          />
          <path
            d="M15.262 13.8167C16.0407 12.745 16.5 11.4261 16.5 10C16.5 6.41015 13.5899 3.5 10 3.5C6.41015 3.5 3.5 6.41015 3.5 10C3.5 13.5899 6.41015 16.5 10 16.5C11.4421 16.5 12.7745 16.0304 13.8526 15.2357L14.9231 16.3062C13.5656 17.3675 11.8567 18 10 18C5.58172 18 2 14.4183 2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 11.8407 17.3783 13.5363 16.3334 14.8881L15.262 13.8167Z"
          />
        </svg>
      </div>
      <p
        class="description medium"
      >
        Error test
      </p>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should create an alert with success, medium, and with icon closed if children is defined 1`] = `
<div>
  <div
    class="root success medium"
  >
    <div
      class="content"
    >
      <div
        class="icon medium"
      >
        <svg
          class="svgWrapper animated"
          version="1.1"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9.23989 10.7168L12.1705 7.68797L13.2485 8.73101L9.22458 12.8898L6.97226 10.4954L8.06485 9.46763L9.23989 10.7168Z"
            fill-rule="evenodd"
          />
          <path
            d="M13.8347 15.2489C12.7597 16.0356 11.4341 16.5 10 16.5C6.41015 16.5 3.5 13.5899 3.5 10C3.5 6.41015 6.41015 3.5 10 3.5C13.5899 3.5 16.5 6.41015 16.5 10C16.5 11.4341 16.0356 12.7597 15.2489 13.8347L16.3199 14.9056C17.3729 13.551 18 11.8487 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18C11.8487 18 13.551 17.3729 14.9056 16.3199L13.8347 15.2489Z"
          />
        </svg>
      </div>
      <p
        class="description medium"
      >
        Success test
      </p>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should not show alert if children is empty 1`] = `<div />`;

exports[`<Alert /> should not show close button if showCloseIcon is false 1`] = `
<div>
  <div
    class="root success medium"
  >
    <div
      class="content"
    >
      <div
        class="icon medium"
      >
        <svg
          class="svgWrapper animated"
          version="1.1"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9.23989 10.7168L12.1705 7.68797L13.2485 8.73101L9.22458 12.8898L6.97226 10.4954L8.06485 9.46763L9.23989 10.7168Z"
            fill-rule="evenodd"
          />
          <path
            d="M13.8347 15.2489C12.7597 16.0356 11.4341 16.5 10 16.5C6.41015 16.5 3.5 13.5899 3.5 10C3.5 6.41015 6.41015 3.5 10 3.5C13.5899 3.5 16.5 6.41015 16.5 10C16.5 11.4341 16.0356 12.7597 15.2489 13.8347L16.3199 14.9056C17.3729 13.551 18 11.8487 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18C11.8487 18 13.551 17.3729 14.9056 16.3199L13.8347 15.2489Z"
          />
        </svg>
      </div>
      <p
        class="description medium"
      >
        Success test
      </p>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should not show icon if showIcon is false 1`] = `
<div>
  <div
    class="root success medium"
  >
    <div
      class="content"
    >
      <p
        class="description medium"
      >
        Success test
      </p>
    </div>
  </div>
</div>
`;
